--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,6 @@
-# Compiled Object files
-*.o
-*.obj
+# Vagrant runtime directories and files
+.vagrant/
 
-# Compiled Dynamic libraries
-*.so
-*.dylib
-*.dll
-
-# Compiled Static libraries
-*.a
-*.lib
-
-# Executables
-*.exe
-
-# DUB
-.dub
-docs.json
-__dummy.html
-docs/
-
-# Code coverage
-*.lst
+# Temp vim files
+*.swp
+*/*.swp
